--- a/index.html
+++ b/index.html
@@ -72,94 +72,43 @@
         </div>
         <!-- biodata end-->
         <!-- form start-->
-        <div id="isi_form" class="container px-5 px-md-3" style="display:block;">
+        <form id="isi_form" class="container px-5 px-md-3" onsubmit="simpanForm()" style="display:none;">
             <div class="row bg-white pb-5 pb-sm-3 mb-sm-5 shadow-sm">
                 <div class="mb-3">
                     <label for="formGroupExampleInput" class="form-label">Nama</label>
-                    <input type="text" class="form-control" id="formNama">
+                    <input type="text" class="form-control" id="formNama" placeholder="Masukkan Nama Anda" required>
                 </div>
                 <div class="mb-3">
                     <label for="formGroupExampleInput2" class="form-label">Role</label>
-                    <input type="text" class="form-control" id="formRole">
+                    <input type="text" class="form-control" id="formRole" placeholder="Masukkan Profesi Anda" required>
                 </div>
                 <div class="mb-3">
                     <label for="formGroupExampleInput3" class="form-label">Availability</label>
-                    <input type="text" class="form-control" id="formAvailability">
+                    <input type="text" class="form-control" id="formAvailability" placeholder="Masukkan Tipe Pekerjaan Anda" required>
                 </div>
                 <div class="mb-3">
                     <label for="formGroupExampleInput4" class="form-label">Usia</label>
-                    <input type="text" class="form-control" id="formUsia">
+                    <input type="text" class="form-control" id="formUsia" placeholder="Masukkan Usia Anda" required>
                 </div>
                 <div class="mb-3">
                     <label for="formGroupExampleInput5" class="form-label">Lokasi</label>
-                    <input type="text" class="form-control" id="formLokasi">
+                    <input type="text" class="form-control" id="formLokasi" placeholder="Masukkan Lokasi Tinggal Anda" required>
                 </div>
                 <div class="mb-3">
                     <label for="formGroupExampleInput6" class="form-label">Years Experience</label>
-                    <input type="text" class="form-control" id="formExperience">
+                    <input type="text" class="form-control" id="formExperience" placeholder="Masukkan Lama Pengalaman Anda" required>
                 </div>
                 <div class="mb-3">
                     <label for="formGroupExampleInput7" class="form-label">Email</label>
-                    <input type="text" class="form-control" id="formEmail">
+                    <input type="text" class="form-control" id="formEmail" placeholder="Masukkan Email Anda" required>
                 </div>
                 <div class="mb-3">
-                    <button type="submit" class="btn btn-success mt-4" style="width: 100%;" onclick="simpanForm()">SUBMIT</button>
+                    <button type="submit" class="btn btn-success mt-4" style="width: 100%;">SUBMIT</button>
                 </div>
             </div>
-        </div>
+        </form>
         <!-- form end-->
 
-        <script>
-            function dropdown(){
-                //binding elemen
-                let dropdownNavEl = document.getElementById("dropdown_nav")
-                //kondisi:
-                //apabila tampilan dropdown ada (display:block), maka tombol berfungsi menghilangkan div.
-                //apabila tampilan dropdown hilang(display:none), maka tombol berfungsi memunculkan div.
-                if (dropdownNavEl.style.display === "block") {
-                    dropdownNavEl.style.display = "none"
-                } else {
-                    dropdownNavEl.style.display = "block"
-                    }
-            }
-            function simpanForm(){
-                //binding input elemen
-                let formNamaEl = document.getElementById("formNama")
-                let formRoleEl = document.getElementById("formRole")
-                let formUsiaEl = document.getElementById("formUsia")
-                let formLokasiEl = document.getElementById("formLokasi")
-                let formExperienceEl = document.getElementById("formExperience")
-                let formEmailEl = document.getElementById("formEmail")
-                let formAvailabilityEl = document.getElementById("formAvailability")
-                //ambil value
-                let formNama = formNamaEl.value
-                let formRole = formRoleEl.value
-                let formUsia = formUsiaEl.value
-                let formLokasi = formLokasiEl.value
-                let formExperience = formExperienceEl.value
-                let formEmail = formEmailEl.value
-                let formAvailability = formAvailabilityEl.value
-                //binding hasil
-                nama.innerText = formNama
-                role.innerText = formRole
-                pengalaman.innerText = formExperience
-                usia.innerText = formUsia
-                lokasi.innerText = formLokasi
-                email.innerText = formEmail
-                availability.innerText = formAvailability
-            }
-            function tampilkanData(){
-                //binding input elemen
-                let isiFormEl = document.getElementById("isi_form")
-                //kondisi:
-                //apabila tampilan id isi_form ada (display:block), maka tombol berfungsi menghilangkan div.
-                //apabila tampilan id isi_form hilang(display:none), maka tombol berfungsi memunculkan div.
-                if (isiFormEl.style.display === "block") {
-                        isiFormEl.style.display = "none"
-                } else {
-                        isiFormEl.style.display = "block"
-                    }
-            }
-        </script>
+        <script src="script.js"></script>
     </body>
 </html>
